add layout for sign up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Social</string>
+    <string name="login">Логин</string>
+    <string name="password">Пароль</string>
 </resources>
