--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Social</string>
     <string name="login">Логин</string>
     <string name="password">Пароль</string>
+    <string name="sign_up">Зарегистрироваться</string>
 </resources>
