--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="login">Логин</string>
     <string name="password">Пароль</string>
     <string name="sign_up">Зарегистрироваться</string>
+    <string name="email">Почта</string>
 </resources>
